--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -15,7 +15,7 @@
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#titulo-modal">
+                    data-bs-target="#titulo-experiencia-modal">
                 </fa-icon>
             </div>
             
@@ -62,7 +62,7 @@
 
     <div 
     class="modal fade modal-lg"      
-    id="titulo-modal" tabindex="-1" 
+    id="titulo-experiencia-modal" tabindex="-1" 
     aria-labelledby="textoModalLabel"
     aria-hidden="true"
     >
