--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -13,7 +13,7 @@
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#titulo-modal">
+                    data-bs-target="#titulo-conocimiento-modal">
                 </fa-icon>
             </div>
             
@@ -33,7 +33,7 @@
 
     <div 
     class="modal fade modal-lg"      
-    id="titulo-modal" tabindex="-1" 
+    id="titulo-conocimiento-modal" tabindex="-1" 
     aria-labelledby="textoModalLabel"
     aria-hidden="true"
     >
