--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -1,4 +1,4 @@
-<section class="d-flex justify-content-center align-items-center" id="experiencia laboral" >
+<section class="d-flex justify-content-center align-items-end" id="experiencia laboral" >
     <div class="card" id="container" appScrollExpLaboral>
         <div class="my-2 d-flex justify-content-between align-items-baseline">
             <h3><strong>{{titulo}}</strong></h3>
