fixed error refrescar pagina con rutas dinamicas

--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -26,9 +26,8 @@
                     *ngFor="let experiencia of experiencias" 
                     [ngClass]="{'boton-exp-item-seleccionado': experiencia === experienciaSeleccionada}"      
                     class="boton-exp-item"
-                    (click)="onSelect(experiencia); desaparecerPrimerExp()"
-                    [routerLink]="['experiencia', experiencia.id]"
-                   >                   
+                    (click)="onSelect(experiencia); desaparecerPrimerExp(); alternarExperiencias()"
+                    > 
                     {{experiencia.empresa}}
                     <fa-icon [icon]="faX" *ngIf="modoEdicion" class="icono-borrar ms-auto"></fa-icon>
                 </button>                                    
@@ -52,7 +51,7 @@
                         <p>{{experiencias[0].descripcion}}</p>
                     </div>
                 </div>
-                <router-outlet></router-outlet>                
+                <router-outlet *ngIf="!mostrarPrimerExp"></router-outlet>                
             </div>  
         </div>              
     </div>
