--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
@@ -6,7 +6,6 @@
     height: 500px;    
 }
 
-
 h3{
     color: lightblue;
 }
@@ -215,6 +214,12 @@ a:hover::after{
     .animacion-lista-seleccion{    
         transform: translateX(var(--exp-bar-position-X)) !important;             
     } 
+}
+
+@media screen and (max-width:1400px) {   
+    section {
+        margin-top: 100px;       
+    }
 }
 
    
