--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
@@ -22,7 +22,8 @@
           <app-proyectos-item            
               *ngFor="let proyecto of proyectos"
               [proyecto]="proyecto"
-              class="proyectos-div my-3 w-100 d-flex flex-wrap"               
+              class="my-3 w-100 d-flex" 
+              id="app"                           
           >
           </app-proyectos-item>  
       </div>              
