--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
@@ -1,4 +1,52 @@
+#contenedor-imagen{
+    width: 50%;    
+    margin-right: 20px;
+    transition: all 0.3s ease;
+}
 
+h4{
+    font-weight: bold;
+}
+
+#contenedor-imagen:hover {   
+    transition: all 0.3s ease;
+    transform: scale(0.96);
+}
+
+img {
+    width: 100%; 
+    height: 300px;
+}
+
+#contenedor-texto {
+    width: 50%;
+    margin-left:auto;
+    height: 300px;
+}
+
+.contenedor-tecnologias-iconos {     
+    margin-top: 80px;
+    color: rgb(147, 214, 236);    
+}
+
+#icono-github{
+    height:40px;
+    width: 45px;
+    position: relative;
+    right: 17%;      
+}
+#icono-flecha{
+    font-size: 1.3em;
+    position: relative;
+    top: 14%;
+    color: white;
+}
+
+.iconos:hover{
+    filter: drop-shadow(0 0 7px lightblue);
+    color: lightblue !important;
+    
+}
 
 .icono-borrar {
     color:red;
@@ -11,8 +59,28 @@
     transform: scale(1.3)
 }
 
-@media screen and (max-width:900px) {
-    div {
-        width:100% !important
-    }
+@media screen and (max-width:950px) {
+   #contenedor-texto{    
+    position: absolute;
+    width: 100%;
+    opacity: 0; 
+    padding: 5px 5px    
+   }
+  
+   #contenedor-imagen{
+    width: 100%;
+    margin-right: 0px;    
+   }
+   #contenedor-texto:hover{
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 1;       
+    transform: scale(0.97);
+    transition: all 0.5s ease-in-out; 
+    cursor: default;
+    
+   }
+   .contenedor-iconos {
+    margin-top: 4px !important
+   }
+   
 }
