--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
                         <a class="nav-link link" href="#contacto" (click)="contraerNav()">Contacto</a>
                     </li>
                     <li class="nav-item ms-2">
-                        <a class="nav-link" href="#"> <button id="boton_cv" (click)="contraerNav()">Currículum</button></a>
+                        <a class="nav-link" href="../../../assets/Currículum.pdf" target="_blank"> <button id="boton_cv" (click)="contraerNav()">Currículum</button></a>
                     </li>                    
                 </ul>  
                 <div class="d-flex justify-content-end me-xl-2">                    
