--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.html
@@ -11,14 +11,14 @@
       <h4>{{proyecto.nombre}}</h4>
       <fa-icon [icon]="faX" *ngIf="modoEdicion" class="icono-borrar"></fa-icon>
     </div>
-    <div style="height: 32%;" >
+    <div style="height: 185px" >
       <p>{{proyecto.descripcion}}</p>
     </div>
     <div class="contenedor-tecnologias-iconos">
         <div class="d-flex gap-3">
           <label *ngFor="let tecnologia of proyecto.tecnologias" class="tecnologia">{{tecnologia}}</label>
         </div>    
-        <div class="contenedor-iconos d-flex mt-2 gap-1">          
+        <div class="contenedor-iconos d-flex gap-1">          
           <a href="{{proyecto.urlGitHub}}" target="_blank" title="GitHub">         
               <img class="iconos" id="icono-github" src="../assets/GitHub.png">                    
           </a>
