link cv y formulario añadir proyectos

--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -39,7 +39,9 @@
                         <a class="nav-link link" href="#contacto" (click)="contraerNav()">Contacto</a>
                     </li>
                     <li class="nav-item ms-2">
-                        <a class="nav-link" href="../../../assets/Currículum.pdf" target="_blank"> <button id="boton_cv" (click)="contraerNav()">Currículum</button></a>
+                        <a class="nav-link" href="https://drive.google.com/file/d/128Fr4-4NTl4tOaN1A0ddEX3arm-wKYz2/view?usp=sharing" target="_blank"> 
+                            <button id="boton_cv" (click)="contraerNav()">Currículum</button>
+                        </a>
                     </li>                    
                 </ul>  
                 <div class="d-flex justify-content-end me-xl-2">                    
