--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
@@ -93,33 +93,55 @@
               <div class="modal-header justify-content-center">
                   <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Proyecto</h3>                        
               </div>
-              <div class="modal-body">                           
+              <div class="modal-body">
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nombre</label>
+                        <input 
+                            #Nombre 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nombre">
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Descripción</label>              
+                            <textarea
+                                #Descripcion 
+                                maxlength="300"           
+                                class="form-control inputModal2" 
+                                placeholder="Ingrese descripción del proyecto"></textarea>
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">URL Sitio Web</label>
+                        <input 
+                            #URLWeb
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese url del sitio web del proyecto (si posee)">
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">URL GitHub</label>
+                        <input 
+                            #URLGitHub
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese url del sitio del proyecto en GitHub">
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Tecnologías</label>
+                        <input 
+                            #Tecnologias
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese las tecnologías utilizadas en el proyecto">
+                    </div>                      
+                    <div class="mb-2">
+                        <label for="user" class="form-label etiquetaModal">Imagen</label>                                               
+                        <input class="inputEdicion me-2" (change)="capturarImagen($event)" #nuevaImagen type="file">
+                        <label class="textoModal">{{nombreArchivo}}</label>             
+                    </div>
+                    <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                 
                   
-                  <div class="d-flex align-items-baseline mb-3">
-                      <label for="user" class="form-label etiquetaModal">Nombre</label>
-                      <input 
-                          #Nombre 
-                          type="text" 
-                          class="form-control inputModal" 
-                          placeholder="Ingrese nombre">
-                  </div>
-                  <div class="d-flex align-items-baseline mb-3">
-                      <label for="user" class="form-label etiquetaModal">Nivel</label>
-                      <input 
-                          #Nivel 
-                          type="text" 
-                          class="form-control inputModal" 
-                          placeholder="Ingrese nivel de progreso (entre 10 y 90)">
-                  </div>
-
-                  <div class="mb-2">
-                      <label for="user" class="form-label etiquetaModal">Imagen</label>                                               
-                      <input class="inputEdicion me-2" (change)="capturarImagen($event)" #nuevaImagen type="file">
-                      <label class="textoModal">{{nombreArchivo}}</label>             
-                  </div>
-                  <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                 
-                  
-                  <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                       <button 
                           type="button" 
                           class="btn btn-danger"                            
